--- a/_config.yml
+++ b/_config.yml
@@ -125,14 +125,14 @@ navigation_header:
   url: /
 - title: Team
   url: /team/
-- title: Blog
-  url: /blog/
-- title: Categories
-  url: /categories/
-- title: Search
-  url: /search/
-- title: Fork Alembic
-  url: https://github.com/daviddarnes/alembic
+# - title: Blog
+#   url: /blog/
+# - title: Categories
+#   url: /categories/
+# - title: Search
+#   url: /search/
+# - title: Fork Alembic
+#   url: https://github.com/daviddarnes/alembic
 
 navigation_footer:
 - title: Created by David Darnes
