--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
 title: "ReCompute" # Site name or title, also used in jekyll-seo-tag
-logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
+logo: "/assets/logos/rcclogo_0.svg" # Site logo, also used in jekyll-seo-tag
 description: "This is the website for the Responsible Computing Collective, a student-run group at Harvard. Change this in site-aside.html in /_includes" # Site description and default description, also used in jekyll-seo-tag
 url: "https://responsiblecomputingcollective.github.io" # Site url, also used in jekyll-seo-tag
 baseurl: ""
